update text and styles at Danskskolen med alex

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 baseurl: /cws-website/
 url: http://cws.javadog.io
-title: Cryptographic Web Store
+title: CWS - PGP for Clouds
 email: developers@javadog.io
 author: Kim N. Jensen
 description: > # "Write an awesome description for your new site here. 
