--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ author: Kim N. Jensen
 description: > # "Write an awesome description for your new site here. 
   CWS saves your data encrypted, so only those who should have access to it, can access it.
 copyright: 'Copyright &copy; 2017-2020 Kim N. Jensen. All Rights Reserved.'
-credits: 'Credits: Kim Jensen'
+credits: 'Credits: Kim N. Jensen'
 
 # ----------------------- #
 #    Jekyll & Plugins     #
